--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -3,16 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.ChatFragment">
+    tools:context=".Fragments.ChatFragment"
+    android:background="@drawable/bg4">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/chatRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Chat Fragment"
-        android:gravity="center"
-        android:textSize="35sp"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
