--- a/app/src/main/res/layout/layout_sender.xml
+++ b/app/src/main/res/layout/layout_sender.xml
@@ -37,6 +37,8 @@
             android:maxWidth="270dp"
             android:minWidth="50dp"
             android:text="Catarsys"
+            android:textSize="18sp"
+            android:textColor="@color/black"
 
             app:layout_constraintBottom_toTopOf="@+id/senderTime"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
