--- a/app/src/main/res/layout/layout_receiver.xml
+++ b/app/src/main/res/layout/layout_receiver.xml
@@ -22,6 +22,8 @@
         android:maxWidth="270dp"
         android:minWidth="50dp"
         android:text="text view"
+        android:textColor="@color/black"
+        android:textSize="18sp"
         app:layout_constraintVertical_bias="1.0"
         app:layout_constraintBottom_toTopOf="@+id/receiver_time"
         app:layout_constraintEnd_toEndOf="parent"
