--- a/app/src/main/res/layout/user_template.xml
+++ b/app/src/main/res/layout/user_template.xml
@@ -12,8 +12,8 @@
         android:layout_marginLeft="5dp"
         android:padding="5dp"
         android:src="@drawable/avatar3"
-        app:civ_border_color="#FF000000"
-        app:civ_border_width="2dp"/>
+        app:civ_border_color="@color/silver"
+        app:civ_border_width="1dp"/>
     
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,9 +26,10 @@
             android:layout_height="wrap_content"
             android:id="@+id/userNameList"
             android:paddingTop="5dp"
+            android:layout_marginLeft="10dp"
             android:paddingBottom="5dp"
             android:text="Name Lastname"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/black"/>
         
@@ -37,6 +38,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/lastMessage"
             android:paddingTop="2dp"
+            android:layout_marginLeft="10dp"
+            android:textSize="15dp"
             android:paddingBottom="2dp"
             android:text="Last message"/>
         
