--- a/app/src/main/res/layout/layout_receiver.xml
+++ b/app/src/main/res/layout/layout_receiver.xml
@@ -22,7 +22,7 @@
         android:maxWidth="270dp"
         android:minWidth="50dp"
         android:text="text view"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintVertical_bias="1.0"
         app:layout_constraintBottom_toTopOf="@+id/receiver_time"
@@ -38,6 +38,7 @@
         android:layout_marginBottom="3dp"
         android:text="12:00 pm"
         android:textSize="10sp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
