--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
     <color name="status_bg">#009688</color>
     <color name="chat_bg">#8bc34a</color>
     <color name="fb_color">#3c5793</color>
-    <color name="lightGreen">#e5ffcc</color>
+    <color name="lightGreen">#633B48</color>
     <color name="settingIconColor">#0e8374</color>
     <color name="grayBg">#bcbcbc</color>
     <color name="chatbg">#aaaaaa</color>
@@ -32,5 +32,11 @@
     <color name="blue3">#1C609C</color>
     <color name="peach">#F9CA89</color>
     <color name="silver">#A8A9AD</color>
+
+    <!--bg-->
+    <color name="marron">#2A2831</color>
+    <color name="marron_2">#4A4458</color>
+    <color name="marron_3">#332D41</color>
+
 
 </resources>
