--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Catarsys" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/blue2</item>
+        <item name="colorPrimary">@color/marron_2</item>
         <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/white</item>
         <!--SECONDARY colors-->
