--- a/app/src/main/res/layout/activity_chating.xml
+++ b/app/src/main/res/layout/activity_chating.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:theme="@style/Theme1"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,7 +11,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chatRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/linear"
         android:layout_below="@+id/toolbar"
          />
@@ -21,6 +22,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/addFile"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginRight="4dp"
+            android:src="@drawable/clip" />
     <!--Fiels for enter message-->
         <EditText
             android:id="@+id/enterMessage"
@@ -28,12 +38,17 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
+            android:layout_marginBottom="10dp"
+            android:ems="10"
             android:layout_weight="1"
             android:background="@drawable/bg_et_msg"
-            android:ems="10"
             android:hint="Enter your Message"
             android:inputType="textPersonName"
-            android:padding="10dp" />
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:padding="12dp"
+            />
         <!--Icon for send message-->
         <ImageView
             android:id="@+id/send"
@@ -43,7 +58,7 @@
             android:layout_marginLeft="4dp"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
-            app:srcCompat="@drawable/send" />
+            app:srcCompat="@drawable/send_arrow" />
 
     </LinearLayout>
     <Toolbar
@@ -68,55 +83,43 @@
             />
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_image"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:id="@+id/profile_image"
-                android:layout_marginStart="5dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="80dp"
                 android:padding="5dp"
-                 android:src="@drawable/avatar3"
-                app:civ_border_color="#FF000000"
-                app:civ_border_width="2dp"
+                android:src="@drawable/avatar3"
+                app:civ_border_color="@color/white"
+                app:civ_border_width="1dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/backArrow"
                 app:layout_constraintTop_toTopOf="parent"
-            />
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:id="@+id/userName"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:text="Username"
-                android:textSize="18sp"
-                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="@+id/profile_image"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
             />
-            <!--Icons  for audio call,video call and menu-->
+
             <ImageView
+                android:id="@+id/audioCall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/call"
-                android:layout_marginEnd="15dp"
-                android:layout_marginRight="15dp"
-                app:srcCompat="@drawable/call"
+                android:layout_marginRight="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/videoCall"
-                app:layout_constraintTop_toTopOf="parent"/>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/videoCall"
-                android:layout_marginEnd="15dp"
-                android:layout_marginRight="15dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/menuIcon"
+                app:layout_constraintEnd_toStartOf="@+id/menuIcon"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/video"
-                />
+                app:srcCompat="@drawable/call" />
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -126,7 +129,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/menu1"
+                app:srcCompat="@drawable/info2"
                 />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
