--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Catarsys" parent="Theme.AppCompat.Light.DarkActionBar">
+
+
         <item name="colorPrimary">@color/marron_2</item>
         <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/white</item>
@@ -14,4 +16,14 @@
     </style>
 
     <style name="Theme.Catarsys" parent="Base.Theme.Catarsys" />
+    <style name="Theme1" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/marron_2</item>
+        <item name="colorPrimaryVariant">@color/black</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!--SECONDARY colors-->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+    </style>
 </resources>
